# aiq-based-clean-architected-simple-langchain-llm-application

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  dependencies.py  main.py
src/application/use_cases/: chat_use_case.py
src/domain/entities/: message.py
src/domain/interfaces/: llm_service.py
src/infrastructure/llm/: langchain_adapter.py
src/infrastructure/parsers/: json_parser.py
src/presentation/api/: routes.py  schemas.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py
tests/unit/application/: test_chat_use_case.py
tests/unit/domain/: test_entities.py
tests/unit/infrastructure/: test_langchain_adapter.py  test_parsers.py
tests/unit/presentation/: test_api_routes.py
